[workspace]
resolver = "2"
members = [
    "crates/cubrid-protocol",
    "crates/cubrid-client",
    "crates/cubrid-tokio",
    "crates/cubrid-pool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/cubrid-labs/cubrid-rs"
homepage = "https://github.com/cubrid-labs/cubrid-rs"
keywords = ["cubrid", "database", "driver", "sql"]
categories = ["database"]
authors = ["Gyeongjun Paik <paikend@gmail.com>", "Yeongseon Choe <yeongseon.choe@gmail.com>"]

[workspace.dependencies]
thiserror = "2"
bytes = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
