[package]
name = "cubrid-protocol"
description = "CUBRID CAS wire protocol implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cubrid", "database", "protocol", "cas"]
categories = ["database"]
authors.workspace = true

[dependencies]
thiserror.workspace = true
bytes.workspace = true
